# model-building-in-mathematical-programming

./: Makefile  pyproject.toml
dataset/food_manufacture/: market_price.csv  oil_master.csv
src/: common.py
src/food_manufacture/: run.py
src/food_manufacture/domain/: constraints.py  manufacturing_plan.py  month.py  oil.py  task.py
src/food_manufacture/optimization/: model.py  objective.py  variables.py
