[tool.poetry]
name = "model-building-in-mathematical-programming"
version = "0.1.0"
description = ""
authors = ["hitonanode <32937551+hitonanode@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
